--- a/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Keys/tspconfig.yaml
@@ -60,6 +60,7 @@ options:
     inject-spans: true
     generate-fakes: true
   "@azure-tools/typespec-rust":
+    api-version: "7.6"
     crate-name: "azure_security_keyvault_keys"
     crate-version: "0.0.1"
     emitter-output-dir: "{project-root}/generated"
