--- a/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
+++ b/specification/keyvault/Security.KeyVault.Secrets/tspconfig.yaml
@@ -58,6 +58,7 @@ options:
     inject-spans: true
     generate-fakes: true
   "@azure-tools/typespec-rust":
+    api-version: "7.6"
     crate-name: "azure_security_keyvault_secrets"
     crate-version: "0.0.1"
     emitter-output-dir: "{project-root}/generated"
