--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2025-05-15-preview/azure-ai-projects.json
@@ -1428,7 +1428,7 @@
             "x-ms-client-name": "repeatabilityFirstSent"
           },
           {
-            "name": "request",
+            "name": "insight",
             "in": "body",
             "description": "Complete evaluation configuration including data source, evaluators, and result settings",
             "required": true,
