Update tspconfig.yaml for Java

--- a/specification/msi/ManagedIdentity.Management/tspconfig.yaml
+++ b/specification/msi/ManagedIdentity.Management/tspconfig.yaml
@@ -25,7 +25,7 @@ options:
     flavor: azure
     premium: true
     enable-sync-stack: false
-    service-dir: "sdk/resourcemanager"
+    service-dir: "sdk/msi"
   "@azure-tools/typespec-ts":
     package-dir: "arm-msi"
     flavor: azure
