--- a/specification/fabric/Microsoft.Fabric.Management/tspconfig.yaml
+++ b/specification/fabric/Microsoft.Fabric.Management/tspconfig.yaml
@@ -17,6 +17,7 @@ options:
     flavor: azure
     clear-output-folder: true
     namespace: "Azure.ResourceManager.Fabric"
+    api-version: "2023-11-01"
   "@azure-tools/typespec-python":
     package-dir: "azure-mgmt-fabric"
     flavor: "azure"
