--- a/specification/resourcenotifications/ResourceNotifications.Management/suppressions.yaml
+++ b/specification/resourcenotifications/ResourceNotifications.Management/suppressions.yaml
@@ -6,3 +6,10 @@
     - "SdkTspConfigValidation"
   subRules: 
     - "options.@azure-tools/typespec-go.*"
+
+- tool: TypeSpecValidation
+  paths:
+    - "main.tsp"
+  reason: "x-ms-error-response extension is required for proper error response handling. @error decorator alone is insufficient."
+  rules:
+    - "@azure-tools/typespec-azure-core/no-openapi"
