--- a/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
+++ b/specification/resourcenotifications/ResourceNotifications.Management/tspconfig.yaml
@@ -38,3 +38,5 @@ options:
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
+  disable:
+    "@azure-tools/typespec-azure-core/no-openapi": "Suppressed because x-ms-error-response extension is required for proper error response handling"
