--- a/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/stable/2025-06-01/netapp.json
@@ -6672,6 +6672,11 @@
           "202": {
             "description": "Resource operation accepted.",
             "headers": {
+              "Azure-AsyncOperation": {
+                "type": "string",
+                "format": "uri",
+                "description": "A link to the status monitor"
+              },
               "Location": {
                 "type": "string",
                 "description": "The Location header contains the URL where the status of the long running operation can be checked."
@@ -6696,7 +6701,7 @@
           }
         },
         "x-ms-long-running-operation-options": {
-          "final-state-via": "location",
+          "final-state-via": "azure-async-operation",
           "final-state-schema": "#/definitions/GetKeyVaultStatusResponse"
         },
         "x-ms-long-running-operation": true
