refactor(trustedsigning): migrate to unified folder structure (#37006)
* refactor structure folder

* update path in specification/suppressions.yaml file

--- a/specification/trustedsigning/data-plane/TrustedSigning/tspconfig.yaml
+++ b/specification/trustedsigning/data-plane/TrustedSigning/tspconfig.yaml
@@ -10,9 +10,9 @@ options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "none"
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     omit-unreachable-types: true
-    output-file: "{azure-resource-provider-folder}/Azure.Developer.TrustedSigning/{version-status}/{version}/azure.developer.trustedsigning.json"
+    output-file: "{version-status}/{version}/azure.developer.trustedsigning.json"
   "@azure-tools/typespec-python":
     package-dir: "azure-developer-trustedsigning"
     namespace: "azure.developer.trustedsigning"
