--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -53,7 +53,7 @@
     - servicenetworking/resource-manager/Microsoft.ServiceNetworking/ServiceNetworking/preview/2023-05-01-preview/TrafficController.json
     - sphere/resource-manager/Microsoft.AzureSphere/preview/2022-09-01-preview/azuresphere.json
     - splitio/resource-manager/SplitIO.Experimentation/preview/2024-03-01-preview/splitio.json
-    - translation/data-plane/Azure.AI.DocumentTranslation/preview/2023-11-01-preview/openapi.json
+    - translation/data-plane/DocumentTranslation/preview/2023-11-01-preview/openapi.json
 
 - tool: TypeSpecValidation
   reason: Suppress until we know the awsconnector folder uses these settings
@@ -1094,7 +1094,7 @@
     - options.@azure-tools/typespec-python.generate-sample
     - options.@azure-tools/typespec-python.generate-test
   paths:
-    - translation/Azure.AI.DocumentTranslation/tspconfig.yaml
+    - translation/data-plane/DocumentTranslation/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
@@ -1108,7 +1108,7 @@
     - options.@azure-tools/typespec-go.service-dir
     - options.@azure-tools/typespec-java.namespace
   paths:
-    - translation/Azure.AI.TextTranslation/tspconfig.yaml
+    - translation/data-plane/TextTranslation/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
